# portfolio

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  render.yaml  styles.css
config/: preview-urls.json
screenshot-worker/: package-lock.json  package.json  server.js
scripts/: refresh-screenshots.mjs
src/: backend.rs  frontend.rs  main.rs
tasks/: todo.md
