[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Document",
  "Element",
  "HtmlElement",
  "MediaQueryList",
  "Storage",
  "Window",
] }
yew = { version = "0.21", features = ["csr"] }
