[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = "0.3"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Headers",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlImageElement",
  "MediaQueryList",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Storage",
  "Window",
] }
yew = { version = "0.21", features = ["csr"] }
